syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_package = "io.github.lorenzobucci.tesi.metamodel.mobile_device.service.gRPC";

package mobile_device;

service crud {
  rpc AddMobileDeviceDT(MobileDeviceDTConstructorParameters) returns (MobileDeviceDTDTO);
  rpc GetMobileDeviceDT(MobileDeviceDTDTO) returns (MobileDeviceDTDTO);
  rpc RetrieveMobileDeviceDTs(google.protobuf.Empty) returns (MobileDeviceDTList);
  rpc RemoveMobileDeviceDT(MobileDeviceDTDTO) returns (google.protobuf.Empty);

  rpc GetTask(TaskDTO) returns (TaskDTO);
  rpc RetrieveTasks(google.protobuf.Empty) returns (TaskList);
}

service operational {
  rpc SignalMobileDeviceEndpointInvocation(EndpointInvocationParameters) returns (google.protobuf.Empty);
  rpc SignalMobileDeviceTaskCompletion(TaskCompletionParameters) returns (google.protobuf.Empty);
  rpc SyncMobileDeviceDTProperties(MobileDeviceDTSyncParameters) returns (google.protobuf.Empty);
}

// DTO

message MobileDeviceDTDTO {
  int64 id = 1;
  repeated TaskDTO runningTasks = 2;
  repeated PositionDTO trajectory = 3;
}

message TaskDTO {
  int64 id = 1;
  string endpointURI = 2;
  string parameters = 3;
}

message PositionDTO {
  google.protobuf.Timestamp timestamp = 1;
  float latitude = 2;
  float longitude = 3;
}

// DTO LIST

message MobileDeviceDTList {
  repeated MobileDeviceDTDTO mobileDeviceDTs = 1;
}

message TaskList {
  repeated TaskDTO tasks = 1;
}

// METHODS PARAMETERS

message MobileDeviceDTConstructorParameters {

}


message EndpointInvocationParameters {
  MobileDeviceDTDTO mobileDeviceDT = 1;
  string invokedEndpoint = 2;
  string parameters = 3;
}

message TaskCompletionParameters {
  MobileDeviceDTDTO mobileDeviceDT = 1;
  TaskDTO completedTask = 2;
}

message MobileDeviceDTSyncParameters {
  MobileDeviceDTDTO mobileDeviceDT = 1;
  PositionDTO currentPosition = 2;
}